@@ -46,6 +46,8 @@ if (ipv6enabled()) {
 		$pconfig['ipv6mode'] = "6to4";
 	} else if ($config['interfaces']['lan']['ipaddr6'] == "DHCP-PD") {
 		$pconfig['ipv6mode'] = "DHCP-PD";
+		$pconfig['slalen'] = $config['interfaces']['lan']['slalen'];
+		$pconfig['slaid'] = $config['interfaces']['lan']['slaid'];
 	} else if ($config['interfaces']['lan']['ipaddr6']) {
 		$pconfig['ipaddr6'] = $config['interfaces']['lan']['ipaddr6'];
 		$pconfig['subnet6'] = $config['interfaces']['lan']['subnet6'];
@@ -104,6 +106,8 @@ if ($_POST) {
 			$oldipv6ra = $config['interfaces']['lan']['ipv6ra'];
 			$oldipv6ram = $config['interfaces']['lan']['ipv6ram'];
 			$oldipv6rao = $config['interfaces']['lan']['ipv6rao'];
+			$oldipv6slalen = $config['interfaces']['lan']['slalen'];
+			$oldipv6slaid = $config['interfaces']['lan']['slaid'];
 			
 			if ($_POST['ipv6mode'] == "6to4") {
 				$config['interfaces']['lan']['ipaddr6'] = "6to4";
@@ -114,6 +118,9 @@ if ($_POST) {
 			} else if ($_POST['ipv6mode'] == "DHCP-PD") {
 				$config['interfaces']['lan']['ipaddr6'] = "DHCP-PD";
 				unset($config['interfaces']['lan']['subnet6']);
+				$config['interfaces']['lan']['slaid'] = $_POST['slaid'];
+				$config['interfaces']['lan']['slalen'] = 64 - $_POST['ispfix'];
+				$pconfig['slalen'] = 64 - $_POST['ispfix'];
 				$config['interfaces']['lan']['ipv6ra'] = $_POST['ipv6ra'] ? true : false;
 				$config['interfaces']['lan']['ipv6ram'] = $_POST['ipv6ram'] ? true : false;
 				$config['interfaces']['lan']['ipv6rao'] = $_POST['ipv6rao'] ? true : false;
@@ -133,6 +140,8 @@ if ($_POST) {
 			
 			$v6changed = ($oldipaddr6 != $config['interfaces']['lan']['ipaddr6'] ||
 						  $oldsubnet6 != $config['interfaces']['lan']['subnet6'] ||
+						  $oldipv6slalen != $config['interfaces']['lan']['slalen'] ||
+						  $oldipv6slaid != $config['interfaces']['lan']['slanid'] ||
 						  isset($oldipv6ra) != isset($_POST['ipv6ra'])  ||
 						  isset($oldipv6ram) != isset($_POST['ipv6ram'])  ||
 						  isset($oldipv6rao) != isset($_POST['ipv6rao']));
@@ -167,11 +176,14 @@ if ($_POST) {
 function enable_change(enable_over) {
 <?php if (ipv6enabled()): ?>
 	var en = (document.iform.ipv6mode.selectedIndex == 1 || enable_over);
+	var pd = (document.iform.ipv6mode.selectedIndex == 3 || enable_over);
 	document.iform.ipaddr6.disabled = !en;
 	document.iform.subnet6.disabled = !en;
 	document.iform.ipv6ra.disabled = !(document.iform.ipv6mode.selectedIndex != 0 || enable_over);
 	document.iform.ipv6ram.disabled = !(document.iform.ipv6mode.selectedIndex != 0 || enable_over);
 	document.iform.ipv6rao.disabled = !(document.iform.ipv6mode.selectedIndex != 0 || enable_over);
+	document.iform.ispfix.disabled = !pd;
+	document.iform.slaid.disabled = !pd;
 <?php endif; ?>
 	
 	if (document.iform.mode) {
@@ -242,6 +254,24 @@ function enable_change(enable_over) {
                       <?php endfor; ?>
                     </select><br>
 					   Using a number less than /64 will cause RAs not to be announced as there aren't enough subnet bits. i.e. /48</td>
+                </tr>
+                 <tr> 
+                  <td valign="top" class="vncellreq">IPv6 Prefix Delegation</td>
+                  <td class="vtable"> 
+                    <input name="slaid" type="text" class="formfld" id="slaid" size="4" value="<?=htmlspecialchars($pconfig['slaid']);?>">
+                    / 
+                    <select name="ispfix" class="formfld" id="ispfix">
+                      <?php for ($l = 64; $l > 0; --$l): ?>
+                      <option value="<?=$l;?>" <?php
+                        if ($l == 64 - $pconfig['slalen'] || (!isset($pconfig['slalen']) && $l == 48)) echo "selected";
+                      ?>>
+                      <?=$l;?>
+                      </option>
+                      <?php endfor; ?>
+                    </select><br>
+					   Select site-level aggregator ID and ISP prefix length.<?php echo 64 - $pconfig['slalen'] ?><br>
+					   If ID is 1 and the client is delegated an IPv6 prefix 2001:db8:ffff and prefix 48, this will result in
+					   a single IPv6 prefix, 2001:db8:ffff:1::/64 .</td>
                 </tr>
 				<tr> 
 	                <td valign="top" class="vncellreq">Suggested IPv6 address</td>
